<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6E6E6"
...
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewAvatar"
            app:layout_constraintStart_toStartOf="@+id/cardView1" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingFavoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
        app:elevation="20dp"
...
